Bind group/user association to services, integrate flash message system

--- a/ldapadmin/src/main/webapp/console/app/index.html
+++ b/ldapadmin/src/main/webapp/console/app/index.html
@@ -12,6 +12,8 @@
 
 <body ng-app="admin_console" ng-strict-di ng-controller="AppController">
 
+  <div flash-message="2000"></div>
+
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
