--- a/ldapadmin/src/main/webapp/console/app/index.html
+++ b/ldapadmin/src/main/webapp/console/app/index.html
@@ -15,20 +15,19 @@
   <div flash-message="2000"></div>
 
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a ng-link="home">Dashboard</a></li>
-        <li><a ng-link="users({id: 'all'})">Users</a></li>
-      </ul>
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li><a ng-link="home">Dashboard</a></li>
+          <li><a ng-link="users({id: 'all'})">Users</a></li>
+        </ul>
 
-      <ul class="nav navbar-nav navbar-right">
-        <li class="loader" ng-if="router.isNavigating">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="loader" ng-if="router.isNavigating">
           <i class="fa fa-spinner fa-spin fa-2x"></i>
-        </li>
-      </ul>
+          </li>
+        </ul>
     </div>
   </nav>
-
   <div class="container">
     <ng-viewport></ng-viewport>
   </div>
