Add interval chooser on user analytics

--- a/ldapadmin/src/main/webapp/console/app/assets/index.html
+++ b/ldapadmin/src/main/webapp/console/app/assets/index.html
@@ -20,12 +20,6 @@
           <li><a ng-link="home">Dashboard</a></li>
           <li><a ng-link="users({id: 'all'})">Users</a></li>
         </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-          <li class="loader" ng-if="router.isNavigating">
-          <i class="fa fa-spinner fa-spin fa-2x"></i>
-          </li>
-        </ul>
     </div>
   </nav>
   <div class="container">
@@ -35,6 +29,6 @@
   <script src="libraries.js"></script>
   <script src="templates.js"></script>
   <script src="app.js"></script>
-  <script>require('app');</script>
+  <script>require('app')</script>
 
 </body>
