Move dependencies at their own places

--- a/ldapadmin/src/main/webapp/console/app/assets/index.html
+++ b/ldapadmin/src/main/webapp/console/app/assets/index.html
@@ -24,7 +24,7 @@
         <a ng-link="users({'id': 'all'})" translate>nav.users</a>
       </li>
       <li role="presentation" ng-class="{'active': isActive(['analytics'])}">
-      <a href="#" translate>nav.analytics</a>
+        <a ng-link="analytics({'group': 'all'})" translate>nav.analytics</a>
       </li>
       <li role="presentation" ng-class="{'active': isActive(['logs'])}">
         <a href="#" translate>nav.logs</a>
